naver webtoon crawler implemented

--- a/webscrapping_project/templates/base.html
+++ b/webscrapping_project/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Scrapping List</title>
+    <title>Scrapper</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="{% static "css/style.css" %}">
@@ -13,9 +13,9 @@
 
 </head>
 <body>
-<nav>
+<nav class="green accent-3">
     <div class="container nav-wrapper">
-        <a href="/" class="brand-logo">Scrapping List</a>
+        <a href="/" class="brand-logo">Naver Webtoon Crawler</a>
         <ul id="nav-mobile" class="right">
             <li><a href="/">Home</a></li>
         </ul>
@@ -23,13 +23,13 @@
 </nav>
 
 <div class="container">
-    <h1 style="text-align: center">What do you want to search for on Codedaddies List?</h1>
+    <h1 style="text-align: center">Search for Naver Webtoons that you want to see!</h1>
     <div class="row">
         <div class="col s4">
             <!-- Promo Content 1 goes here -->
             <div class="center">
                 <i class="large material-icons" style="color: #EE6E73">flash_on</i>
-                <p>Fast craigslist web scraper</p>
+                <p>Fast Webtoon web scraper</p>
                 <p class="light center">Scrape away right here with a beautiful GUI.</p>
             </div>
         </div>
