--- a/webscrapping_project/static/css/stylecopy.css
+++ b/webscrapping_project/static/css/stylecopy.css
@@ -333,6 +333,69 @@ h1 a {
 			display: none !important;
 		}
 
+		#panel #content .container{
+			display: block;
+			position: relative;
+			padding-left: 35px;
+			margin-bottom: 12px;
+			margin-top :12px;
+			cursor: pointer;
+			font-size: 15px;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
+		}
+
+		#panel #content .container input{
+			position: absolute;
+			opacity: 0 !important;
+			cursor: pointer; 
+			height: 0;
+			width: 0;
+		}
+
+		#panel #content .checkmark {
+			position: absolute;
+			top: 0;
+			left: 0;
+			height: 25px;
+			width: 25px;
+			background-color: #eee;
+			border-radius: 50%;
+		}
+
+		#panel #content .container:hover input ~ .checkmark {
+			background-color: #ccc;
+		}
+		  
+		  /* When the radio button is checked, add a blue background */
+		#panel #content .container input:checked ~ .checkmark {
+			background-color: #2DB400;
+		}
+		  
+		  /* Create the indicator (the dot/circle - hidden when not checked) */
+		#panel #content .container .checkmark:after {
+			content: "";
+			position: absolute;
+			display: none;
+		}
+		  
+		  /* Show the indicator (dot/circle) when checked */
+		#panel #content .container input:checked ~ .checkmark:after {
+			display: block;
+		}
+		  
+		  /* Style the indicator (dot/circle) */
+		#panel #content .container .checkmark:after {
+			top: 9px;
+			left: 9px;
+			width: 8px;
+			height: 8px;
+			border-radius: 50%;
+			background: white;
+		}
+
 		body.home #panel #content h2 {
 			margin-bottom: 2px;
 			padding-bottom: 0px;
@@ -341,77 +404,93 @@ h1 a {
 			padding-top: 6px;
 		}
 
-.spacer {
-	color: var(--secondary-text-color);
-	margin-left: 2px;
-	padding-right: 2px;
-}
-
-#viewer,
-iframe {
-	position: absolute;
-	border: 0px;
-	left: 0;
-	right: 0;
-	width: 100%;
-	height: 100%;
-	overflow: auto;
-}
-
-#viewer {
-	padding-left: var(--panel-width);
-}
-
-#button {
-	position: fixed;
-	bottom: 16px;
-	right: 16px;
-
-	padding: 12px;
-	border-radius: 50%;
-	margin-bottom: 0px;
-
-	background-color: #FFF;
-	opacity: .9;
-	z-index: 999;
-
-	box-shadow: 0 0 4px rgba(0,0,0,.15);
-}
-	#button:hover {
-		cursor: pointer;
-		opacity: 1;
+		/* GENERAL BUTTON STYLING */
+	button,
+	button::after {
+		-webkit-transition: all 0.3s;
+		-moz-transition: all 0.3s;
+		-o-transition: all 0.3s;
+		transition: all 0.3s;
 	}
-	#button img {
+
+	button {
+		background: none;
+		border: 3px solid #fff;
+		color: #2DB400;
 		display: block;
-		width: var(--icon-size);
+		font-size: 1.6em;
+		font-weight: bold;
+		padding: 0.5em 2em;
+		position: relative;
+		text-transform: uppercase;
 	}
 
-	#button.text {
-		border-radius: 25px;
-		padding-right: 20px;
-		padding-left: 20px;
-		color: var(--text-color);
-		opacity: 1;
-		font-weight: 500;
+	button::before,
+	button::after {
+	background: #2DB400;
+	content: '';
+	position: absolute;
+	z-index: -1;
 	}
 
+	button:hover {
+	color: #fff;
+	}
 
-#projects {
-	display: grid;
-	grid-template-columns: repeat(6, 1fr);
-	line-height: 0;
-}
-#projects a {
-	overflow: hidden;
-}
-#projects a img {
+	/* BUTTON 1 */
+	.btn-1::after {
+	height: 0;
+	left: 0;
+	top: 0;
 	width: 100%;
-	transform: scale(1.0);
-	transition: 0.15s transform;
-}
-#projects a:hover img {
-	transform: scale(1.08);
-}
+	}
+
+	.btn-1:hover:after {
+	height: 100%;
+	}
+
+	.spacer {
+		color: var(--secondary-text-color);
+		margin-left: 2px;
+		padding-right: 2px;
+	}
+
+	#viewer,
+	iframe {
+		position: absolute;
+		border: 0px;
+		left: 0;
+		right: 0;
+		width: 100%;
+		height: 100%;
+		overflow: auto;
+	}
+
+	#viewer {
+		padding-left: var(--panel-width);
+	}
+	
+
+
+	#projects {
+		display: grid;
+		grid-template-columns: repeat(6, 1fr);
+		line-height: 0;
+	}
+
+	#projects a {
+		overflow: hidden;
+	}
+
+	#projects a img {
+		width: 100%;
+		transform: scale(1.0);
+		transition: 0.15s transform;
+	}
+
+	#projects a:hover img {
+		transform: scale(1.08);
+	}
 
 
 
